@@ -1,4 +1,0 @@
-#include "gamepad.h"
-
-Gamepad *tenGetGamepad(void);
-
