@@ -1,0 +1,4 @@
+#include "gamepad.h"
+
+Gamepad *twelveGetGamepad(void);
+
